Fix minor layout bug with service hovers.
The hover adds a 5px bottom border, so add a margin when not hovering
to offset it.

--- a/css/style.css
+++ b/css/style.css
@@ -792,6 +792,7 @@ a:hover {
 .service {
 	padding:12px;
 	text-align:left;
+  margin-bottom: 5px;
 }
 
 .service li {
@@ -800,13 +801,16 @@ a:hover {
     border-bottom: 1px solid #bfbfbf;
     font-size:14px;
 }
+
 .service li:last-child {
     border: none;
 }
 
+
 .service:hover {
 	background-color:#f5f7f8;
 	border-bottom:5px #c0392b solid; 
+  margin-bottom: 0;
 }
 
 
